Homepage: Shop the shots no longer have a white border on the right side on tablet

--- a/app/design/frontend/Shop/hh/web/css/main.less
+++ b/app/design/frontend/Shop/hh/web/css/main.less
@@ -5564,6 +5564,12 @@ Shot Thumbs
     margin: 0 auto;
   }
 }
+@media only screen and (max-width: 1024px) and (min-width: 681px) {
+  .more-shots .more-shots-thumbs:nth-child(even) > .shot-thumb {
+    margin-right: 0;
+    margin-left: 10px;
+  }
+}
 .shot-thumb * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
